--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.2'
 
     implementation("com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.5.0")
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
