--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,6 @@ dependencies {
 
     implementation("com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.5.0")
     implementation 'androidx.cardview:cardview:1.0.0'
+
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 }
